--- a/src/app/components/_user/home/user-profile/user-profile.component.html
+++ b/src/app/components/_user/home/user-profile/user-profile.component.html
@@ -1,8 +1,9 @@
-<div class="container">
+<div
+  class="container"
+  *ngIf="user.data | async as user">
   <div
     class="avatar"
-    [class.default]="!user.avatar"
-    *ngIf="!user.isLoading">
+    [class.default]="!user.avatar">
     <div
       class="image"
       [style.backgroundImage]="'url(' + user.avatar + ')'"
@@ -11,26 +12,24 @@
       class="fas fa-user"
       *ngIf="!user.avatar"></i>
   </div>
-  <div class="info" *ngIf="!user.isLoading">
+  <div class="info">
     <div
       class="title"
-      *ngIf="user.profile?.fname || user.fname">
+      *ngIf="user.profile?.fname || user.displayName">
       <i class="fas fa-user mr-2"></i>
-      {{ user.profile?.fname && user.profile?.lname
-        ? user.profile?.fname + ' ' + user.profile?.lname
-        : user.fname }}
+      {{ user.profile?.fname + ' ' + user.profile?.lname || user.displayName }}
     </div>
     <div
       class="title"
       *ngIf="user.profile?.company">
       <span>
         <i class="fas fa-building mr-2"></i>
-        {{ user.profile.company }}
+        {{ user.profile?.company }}
       </span>
     </div>
     <div *ngIf="user.profile?.website">
       <i class="fas fa-globe mr-2"></i>
-      {{ user.profile.website }}
+      {{ user.profile?.website }}
     </div>
     <div>
       <i class="fa fa-envelope mr-2"></i>
@@ -38,9 +37,9 @@
     </div>
     <a
       routerLink="/me/profile"
-      *ngIf="user.profile && !user.profile?.fname || !user.profile?.company || !user.profile?.website">
-        <i class="fas fa-pencil-alt mr-2"></i>
-        <span class="ml-1">Edit Profile</span>
+      *ngIf="!user.profile?.fname">
+      <i class="fas fa-pencil-alt mr-2"></i>
+      <span class="ml-1">Edit Profile</span>
     </a>
   </div>
 </div>
