--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div
   class="wrapper"
-  [class.lowered]="platform.hasUpdates && platform.isOnline() || !platform.isOnline()"
+  [class.lowered]="serviceWorker.hasUpdates && platform.isOnline() || !platform.isOnline()"
   (click)="nav.closeMenu()">
   <div class="container">
     <router-outlet #outlet="outlet"></router-outlet>
