--- a/src/app/components/_nav/header/header.component.html
+++ b/src/app/components/_nav/header/header.component.html
@@ -1,6 +1,6 @@
 <nav
   [class.expanded]="nav.isMenuOpen"
-  [class.lowered]="platform.hasUpdates && platform.isOnline() || !platform.isOnline()">
+  [class.lowered]="serviceWorker.hasUpdates && platform.isOnline() || !platform.isOnline()">
   <div class="top">
     <a
       class="logo"
@@ -158,7 +158,7 @@
 <!-- PWA » Updates Available -->
 <div
   class="update-banner"
-  [class.active]="platform.hasUpdates && platform.isOnline()"
+  [class.active]="serviceWorker.hasUpdates && platform.isOnline()"
   (click)="reload()">
   <div class="container">
     <span>
