--- a/src/app/components/_user/profile/edit-avatar/edit-avatar.component.scss
+++ b/src/app/components/_user/profile/edit-avatar/edit-avatar.component.scss
@@ -51,7 +51,7 @@
     margin-left: 0;
   }
 
-  &.default { background: $grey-color; }
+  &.default, .loading { background: $grey-color; }
 
   .image {
     height: 100%;
@@ -92,12 +92,4 @@ button {
     &.btn.btn-sm i { font-size: .9rem; }
   }
   @media (min-width: $lg-screen) { margin: 35px auto 0; }
-}
-
-.loading-spinner {
-  height: 100%;
-  width: 100%;
-  font-size: 30px;
-
-  i { color: rgba(255,255,255, .5); }
 }
