update path + meta title info

--- a/src/app/components/_nav/header/header.component.html
+++ b/src/app/components/_nav/header/header.component.html
@@ -70,16 +70,16 @@
           [class.expanded]="nav.isMenuOpen">
           <a
             class="dropdown-item"
-            routerLink="/me"
+            routerLink="/user"
             routerLinkActive="active"
             [routerLinkActiveOptions]="{exact: true}">My Account</a>
           <a
             class="dropdown-item hide-my"
-            routerLink="/me/profile"
+            routerLink="/user/profile"
             routerLinkActive="active">My Profile</a>
           <a
             class="dropdown-item"
-            routerLink="/me/orders"
+            routerLink="/user/orders"
             routerLinkActive="active">Orders</a>
           <a
             class="dropdown-item"
