update forms + add phone

--- a/src/app/components/_user/profile/profile.component.html
+++ b/src/app/components/_user/profile/profile.component.html
@@ -39,6 +39,20 @@
   <div
     class="invalid-label text-danger p-2 pb-3 pl-1"
     *ngIf="formErrors.company">{{ formErrors.company }}</div>
+  <label for="phone">Phone</label>
+  <input
+    type="phone"
+    id="phone"
+    name="phone"
+    class="form-control"
+    [class.mb-4]="!formErrors.phone"
+    autocomplete="off"
+    formControlName="phone"
+    placeholder="555-555-5555"
+    (keyup)="detectChange()">
+  <div
+    class="invalid-label text-danger p-2 pb-3 pl-1"
+    *ngIf="formErrors.phone">{{ formErrors.phone }}</div>
   <label for="website">Website</label>
   <input
     type="text"
@@ -47,6 +61,7 @@
     class="form-control"
     [class.mb-4]="!formErrors.website"
     formControlName="website"
+    placeholder="mysite.com"
     (keyup)="detectChange()">
   <div
     class="invalid-label text-danger p-2 pb-3 pl-1"
