--- a/src/app/styles/_colors.scss
+++ b/src/app/styles/_colors.scss
@@ -9,6 +9,8 @@ $success-color:       #00C851;
 $warm-color:          #F5F7F9;
 $light-grey-color:    #FAFAFA;
 $offset-grey-color:   #F2F2F2;
+$border-color:        #E5E5E5;
+$border-light-color:  $offset-grey-color;
 $grey-color:          #DDD;
 $mid-grey-color:      #999;
 $dark-grey-color:     #555;
