--- a/src/app/styles/_buttons.scss
+++ b/src/app/styles/_buttons.scss
@@ -1,3 +1,5 @@
+@import '../styles/colors';
+
 .btn {
   font-size: 15px;
   font-weight: 700;
@@ -11,6 +13,8 @@
       font-size: 13px;
     }
   }
+
+  p & { text-decoration: none; }
 
   &[type='submit'] {
     display: block;
@@ -30,4 +34,12 @@
   }
 }
 
-p .btn { text-decoration: none; }
+.dropdown-item {
+  user-select: none;
+
+  &.active, &:active { background-color: $purple-color; }
+  &.disabled, &:disabled { color: $grey-color !important; }
+}
+
+.dropdown-toggle:after,
+.dropup .dropdown-toggle:after { margin-left: .5em; }
